--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
 <body>
     <img src="wh.gif" alt="대체 텍스트">
     <img src="1.jpg">
+    <img src="6.gif" alt="대체 텍스트">
+    <img src="2.jpg">
 </body>
 </html>
